<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.TeamFragment">

    <TextView
        style="@style/TextMedium_22_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_16"
        android:paddingTop="@dimen/padding_8"
        android:paddingEnd="@dimen/padding_8"
        android:paddingBottom="@dimen/padding_8"
        android:text="@string/team" />

    <TextView
        style="@style/TextBold_32_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:paddingStart="@dimen/padding_16"
        android:paddingTop="@dimen/padding_8"
        android:paddingEnd="@dimen/padding_8"
        android:paddingBottom="@dimen/padding_8"
        android:text="@string/work_on_application" />

    <TextView
        style="@style/textViewFragmentTeam"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/Nikita" />

    <TextView
        style="@style/textViewFragmentTeam"
        android:text="@string/Daniil" />

    <TextView
        style="@style/textViewFragmentTeam"
        android:text="@string/Timofei" />

    <TextView
        style="@style/textViewFragmentTeam"
        android:text="@string/Gennadi" />

    <TextView
        style="@style/textViewFragmentTeam"
        android:text="@string/Mihail" />

    <TextView
        style="@style/textViewFragmentTeam"
        android:text="@string/Egor" />

</LinearLayout>
