<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.filter.workplace.region.SelectRegionFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ToolbarRegion"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/toolbar_back"
        app:title="@string/choice_of_region" />

    <RelativeLayout
        android:id="@+id/R_search"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/ToolbarRegion">

        <EditText
            android:id="@+id/searchRegion"
            style="@style/mainSearchField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTint="@color/black"
            android:hint="@string/enter_region"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:paddingHorizontal="12dp"
            android:singleLine="true"
            android:textSize="@dimen/text_16" />

        <ImageView
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginEnd="24dp"
            android:src="@drawable/search_icon_search_fragment"
            android:visibility="visible" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imagePlaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginTop="165dp"
        android:src="@drawable/no_vacancies"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/R_search" />

    <TextView
        style="@style/TextMedium_22_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_such_region"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePlaceholder" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RegionRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/R_search" />

</androidx.constraintlayout.widget.ConstraintLayout>
